...
                                    <constraint firstAttribute="width" constant="60" id="nWm-Nx-QE2"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6MF-LL-EPc">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="UR5-od-cDO"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                <viewLayoutGuide key="contentLayoutGuide" id="lvs-3R-MgG"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="M9u-o3-RaE"/>
                                <connections>
                                    <outlet property="delegate" destination="0uX-Mt-TIg" id="6zL-MU-wpB"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Back" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fff-qb-XHk">
                                <rect key="frame" x="8" y="11" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="Back"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="24" id="1ak-hq-HK8"/>
                                    <constraint firstAttribute="height" constant="24" id="Ysj-Zo-vRf"/>
                                </constraints>
...
