...
    //MARK: - Privates properties
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    //MARK: - Overrides methods
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
        progressView.progress = 0
        estimatedProgressObservation = webView.observe(\.estimatedProgress,
                                                        options: [],
                                                        changeHandler: { [weak self] _,_  in
...
